# wallet

./: .coverage  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  logger_config.py  main.py  pyproject.toml  run.sh  Тестовое задание pyton (django) june+.docx
alebmic/: env.py
alebmic/versions/: 49d3a3dd9f24_positive_locking_support.py  eddfb088cf3c_wallets_table.py
api/: __init.py  api_router.py
api/v1/: handlers.py
core/: config.py  database.py
core/crud/: __init__.py  wallet_crud.py
core/graphql/: __init__.py  wallet_schema.py
core/models/: __init__.py  base.py  wallet.py
core/schemas/: __init__.py  operation_schema.py  wallet_schema.py
tests/: conftest.py  test_api.py  test_graphql.py
